feat: rank에 전체 유저수 조회 추가